--- a/LVLSample/src/main/res/values/strings.xml
+++ b/LVLSample/src/main/res/values/strings.xml
@@ -18,10 +18,10 @@
 
     <!-- License checking status messages -->
     <string name="check_license">Check license</string>
-    <string name="checking_license">Checking license...</string>
-    <string name="dont_allow">Don\'t allow the user access</string>
-    <string name="allow">Allow the user access</string>
-    <string name="application_error">Application error: %1$s</string>
+    <string name="checking_license">Checking license…</string>
+    <string name="dont_allow">License check has failed: user has no license</string>
+    <string name="allow">License check has passed (though the signature cannot be verified for technical reasons)</string>
+    <string name="application_error">Error returned: %1$s</string>
 
     <!-- Unlicensed dialog messages -->
     <string name="unlicensed_dialog_title">Application not licensed</string>
